<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:padding="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.goyo.tracking.tracking.initials.login">

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:src="@drawable/backgroubd" />

    <RelativeLayout
        android:id="@+id/userPassLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageLayout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/username_ico"
            android:background="@color/trasperGray"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/login_usrnamehint"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="#CACACA"
            android:textSize="15dp">

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/username_ico"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:padding="3dp"
            android:src="@drawable/ic_action_name" />

        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/edtUserName"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:contentDescription="TODO"
            android:padding="3dp"
            android:src="@drawable/ic_action_pwd" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/edtUserName"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/password_icon"
            android:background="@color/trasperGray"
            android:fontFamily="sans-serif-light"
            android:hint="@string/login_passwordhint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="#CACACA"
            android:textSize="15dp" />


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/edtPassword"
            android:layout_below="@+id/edtPassword"
            android:layout_marginTop="5dp"
            android:textColor="#CACACA"
            android:textSize="15sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@color/orange_light"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_signin"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout

        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="false"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:addStatesFromChildren="false"
        android:background="@android:drawable/screen_background_light_transparent"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

            android:paddingBottom="10dp"
            android:src="@drawable/goyologo500" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp">

        <com.shaishavgandhi.loginbuttons.GoogleButton
            android:id="@+id/btnGoogle"
            android:layout_width="wrap_content"
            android:layout_height="35dp"

            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="Sign in with Google"
            android:textColor="#000"
            app:iconSize="30dp"
            app:transparentBackground="false" />


        <com.shaishavgandhi.loginbuttons.FacebookButton
            android:id="@+id/btnFacebook"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/btnGoogle"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"

            android:text="Sign in with Facebook"
            app:iconSize="30dp"
            app:transparentBackground="false" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnFacebook_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnGoogle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone" />


    </RelativeLayout>

</RelativeLayout>
